manifest: dashboard-admin

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -112,6 +112,20 @@ boss__dashboard__deployment_container_args:
   # to it. Uncomment only if the default does not work.
   # - --apiserver-host=http://my-address:port
 
+
+##########################################################################################################
+#      .########.....###.....######..##.....##.########...#######.....###....########..########.
+#      .##.....##...##.##...##....##.##.....##.##.....##.##.....##...##.##...##.....##.##.....##
+#      .##.....##..##...##..##.......##.....##.##.....##.##.....##..##...##..##.....##.##.....##
+#      .##.....##.##.....##..######..#########.########..##.....##.##.....##.########..##.....##
+#      .##.....##.#########.......##.##.....##.##.....##.##.....##.#########.##...##...##.....##
+#      .##.....##.##.....##.##....##.##.....##.##.....##.##.....##.##.....##.##....##..##.....##
+#      .########..##.....##..######..##.....##.########...#######..##.....##.##.....##.########.
+##########################################################################################################
+
+boss__dashboard__admin__manifest_path: "{{manifest_dir_path}}/dashboard-admin"
+boss__dashboard__admin__namespace_name: kube-system
+
 # ---
 # local_release_dir: /tmp/releases
 
