--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1,10 +1,12 @@
 domain_root: hyenaclan.org
 
-boss__echoserver__echoserver_subdomain: echoserver
-
 dist_dir_path: ~/dev/bossjones/bosslab-playbooks/dist
 manifest_dir_name: manifests/borg-manifests
 manifest_dir_path: "{{dist_dir_path}}/{{manifest_dir_name}}"
+path_to_network_disk: "/mnt/publicdata"
+main_network_interface: 'ens192'
+nfs_server_group: nfs_masters
+nfs_client_group: nfs_clients
 
 #      .########..######..##.....##..#######...######..########.########..##.....##.########.########.
 #      .##.......##....##.##.....##.##.....##.##....##.##.......##.....##.##.....##.##.......##.....##
@@ -15,6 +17,7 @@ manifest_dir_path: "{{dist_dir_path}}/{{manifest_dir_name}}"
 #      .########..######..##.....##..#######...######..########.##.....##....###....########.##.....##
 
 
+boss__echoserver__echoserver_subdomain: echoserver
 boss__echoserver__manifest_path: "{{manifest_dir_path}}/echoserver"
 boss__echoserver__namespace_name: echoserver
 boss__echoserver__deployment_name: echoserver
@@ -125,6 +128,64 @@ boss__dashboard__deployment_container_args:
 
 boss__dashboard__admin__manifest_path: "{{manifest_dir_path}}/dashboard-admin"
 boss__dashboard__admin__namespace_name: kube-system
+
+
+##########################################################################################################
+#   .########.########.##....##
+#   .##.......##.......##...##.
+#   .##.......##.......##..##..
+#   .######...######...#####...
+#   .##.......##.......##..##..
+#   .##.......##.......##...##.
+#   .########.##.......##....##
+##########################################################################################################
+boss__efk__elasticsearch_subdomain: elasticsearch
+boss__efk__manifest_path: "{{manifest_dir_path}}/efk"
+boss__efk__namespace_name: kube-system
+boss__efk__deployment_name: efk
+boss__efk__efk_version: 2.1
+boss__efk__efk_image_repo: "gcr.io/kubernetes-e2e-test-images/efk"
+boss__efk__efk_image_tag: "{{ boss__efk__efk_version }}"
+boss__efk__efk_cpu_limit: 100m
+boss__efk__efk_mem_limit: 55Mi
+boss__efk__efk_cpu_requests: 100m
+boss__efk__efk_mem_requests: 20Mi
+boss__efk__deployment_annotations_list:
+  - name: nginx.ingress.kubernetes.io/ssl-redirect
+    val: \"false\"
+boss__efk__deployment_annotations:
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+boss__efk__deployment_labels:
+  run: nginx
+boss__efk__deployment_spec_replicas: 2
+boss__efk__deployment_spec_template_metadata_labels: "{{boss__efk__deployment_labels}}"
+boss__efk__ingress_labels:
+  run: nginx
+boss__efk__elasticsearch_ingress_annotations:
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+boss__efk__elasticsearch_ingress_labels:
+  k8s-app: elasticsearch-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
+boss__efk__service__spec_selector:
+  run: nginx
+boss__efk__elasticsearch_persistent_volume_claim_labels:
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: elasticsearch-logging
+  boss-part-of: efk
+boss__efk__elasticsearch_persistent_volume_claim_spec_resources_requests_storage: "2Gi"
+boss__efk__elasticsearch_persistent_volume_labels:
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: elasticsearch-logging
+  boss-part-of: efk
+
+boss__efk__elasticsearch_persistent_volume_spec_capacity_storage: 5Gi
+boss__efk__elasticsearch_persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/elasticsearch"
+boss__efk__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+
 
 # ---
 # local_release_dir: /tmp/releases
