--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -144,6 +144,16 @@ boss__efk__manifest_path: "{{manifest_dir_path}}/efk"
 boss__efk__namespace_name: kube-system
 boss__efk__deployment_name: efk
 
+
+##########################################################################################################
+#    .########.##..........###.....######..########.####..######...######..########....###....########...######..##.....##
+#    .##.......##.........##.##...##....##....##.....##..##....##.##....##.##.........##.##...##.....##.##....##.##.....##
+#    .##.......##........##...##..##..........##.....##..##.......##.......##........##...##..##.....##.##.......##.....##
+#    .######...##.......##.....##..######.....##.....##..##........######..######...##.....##.########..##.......#########
+#    .##.......##.......#########.......##....##.....##..##.............##.##.......#########.##...##...##.......##.....##
+#    .##.......##.......##.....##.##....##....##.....##..##....##.##....##.##.......##.....##.##....##..##....##.##.....##
+#    .########.########.##.....##..######.....##....####..######...######..########.##.....##.##.....##..######..##.....##
+##########################################################################################################
 boss__efk__elasticsearch_ingress_annotations:
   nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
 boss__efk__elasticsearch_ingress_labels:
@@ -168,13 +178,15 @@ boss__efk__elasticsearch_persistent_volume_labels:
   addonmanager.kubernetes.io/mode: Reconcile
   k8s-app: elasticsearch-logging
   boss-part-of: efk
-# boss__efk__elasticsearch_version: 5.3.0-1
-# boss__efk__elasticsearch_image_repo: "aknudsen/es-curator-service"
-# boss__efk__elasticsearch_image_tag: "{{ boss__efk__efk_version }}"
-# boss__efk__elasticsearch_cpu_limit: 200m
-# boss__efk__elasticsearch_mem_limit: 500Mi
-# boss__efk__elasticsearch_cpu_requests: 100m
-# boss__efk__elasticsearch_mem_requests: 200Mi
+boss__efk__elasticsearch_version: v5.6.2
+boss__efk__elasticsearch_image_repo: "bossjones/elasticsearch"
+boss__efk__elasticsearch_image_tag: "{{ boss__efk__elasticsearch_version }}"
+boss__efk__elasticsearch_cpu_limit: 1000m
+boss__efk__elasticsearch_mem_limit: 4048Mi
+boss__efk__elasticsearch_cpu_requests: 100m
+boss__efk__elasticsearch_mem_requests: 2350Mi
+
+boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS: "-Xms2048m -Xmx2048m"
 boss__efk__elasticsearch_service_account_labels:
     k8s-app: elasticsearch-logging
     kubernetes.io/cluster-service: "true"
@@ -186,16 +198,150 @@ boss__efk__elasticsearch_cluster_role_labels:
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: efk
 
+boss__efk__elasticsearch_cluster_role_binding_labels:
+    k8s-app: elasticsearch-logging
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+
+boss__efk__elasticsearch_stateful_set_labels:
+    k8s-app: elasticsearch-logging
+    version: {{boss__efk__elasticsearch_version}}
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__elasticsearch_stateful_set_spec_replicas: 1
+boss__efk__elasticsearch_stateful_set_spec_selector_match_labels:
+        k8s-app: elasticsearch-logging
+        version: v5.6.2
+boss__efk__elasticsearch_stateful_set_spec_template_metadata_labels:
+        k8s-app: elasticsearch-logging
+        version: v5.6.2
+        kubernetes.io/cluster-service: "true"
+
+#########################
+
+##########################################################################################################
+#     .########..######...........######..##.....##.########.....###....########..#######..########.
+#     .##.......##....##.........##....##.##.....##.##.....##...##.##......##....##.....##.##.....##
+#     .##.......##...............##.......##.....##.##.....##..##...##.....##....##.....##.##.....##
+#     .######....######..#######.##.......##.....##.########..##.....##....##....##.....##.########.
+#     .##.............##.........##.......##.....##.##...##...#########....##....##.....##.##...##..
+#     .##.......##....##.........##....##.##.....##.##....##..##.....##....##....##.....##.##....##.
+#     .########..######...........######...#######..##.....##.##.....##....##.....#######..##.....##
+##########################################################################################################
 boss__efk__elasticsearch_curator_deployment_labels:
   k8s-app: es-curator
   boss-part-of: efk
+
 boss__efk__elasticsearch_curator_version: 5.3.0-1
 boss__efk__elasticsearch_curator_image_repo: "aknudsen/es-curator-service"
-boss__efk__elasticsearch_curator_image_tag: "{{ boss__efk__efk_version }}"
+boss__efk__elasticsearch_curator_image_tag: "{{ boss__efk__elasticsearch_curator_version }}"
 boss__efk__elasticsearch_curator_cpu_limit: 200m
 boss__efk__elasticsearch_curator_mem_limit: 500Mi
 boss__efk__elasticsearch_curator_cpu_requests: 100m
 boss__efk__elasticsearch_curator_mem_requests: 200Mi
+
+#########################
+
+
+##########################################################################################################
+#    .########.##.......##.....##.########.##....##.########.########.
+#    .##.......##.......##.....##.##.......###...##....##....##.....##
+#    .##.......##.......##.....##.##.......####..##....##....##.....##
+#    .######...##.......##.....##.######...##.##.##....##....##.....##
+#    .##.......##.......##.....##.##.......##..####....##....##.....##
+#    .##.......##.......##.....##.##.......##...###....##....##.....##
+#    .##.......########..#######..########.##....##....##....########.
+##########################################################################################################
+boss__efk__fluentd_version: v2.2.0
+boss__efk__fluentd_image_repo: "bossjones/fluentd-elasticsearch"
+boss__efk__fluentd_image_tag: "{{ boss__efk__fluentd_version }}"
+boss__efk__fluentd_mem_limit: 500Mi
+boss__efk__fluentd_cpu_requests: 100m
+boss__efk__fluentd_mem_requests: 200Mi
+boss__efk__fluentd_config_map_labels:
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__fluentd_service_account_labels:
+    k8s-app: fluentd-es
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__fluentd_cluster_role_labels:
+    k8s-app: fluentd-es
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__fluentd_cluster_role_binding_labels:
+    k8s-app: fluentd-es
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__fluentd_daemon_set_labels:
+    k8s-app: fluentd-es
+    version: v2.2.1
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__fluentd_daemon_set_spec_selector_match_labels:
+      k8s-app: fluentd-es
+      version: v2.2.1
+boss__efk__fluentd_daemon_set_spec_template_metadata_labels:
+        k8s-app: fluentd-es
+        kubernetes.io/cluster-service: "true"
+        version: v2.2.1
+        boss-part-of: efk
+boss__efk__fluentd_daemon_set_spec_template_metadata_annotations:
+        scheduler.alpha.kubernetes.io/critical-pod: ''
+        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
+
+############################################
+
+
+##########################################################################################################
+#   .##....##.####.########.....###....##....##....###...
+#   .##...##...##..##.....##...##.##...###...##...##.##..
+#   .##..##....##..##.....##..##...##..####..##..##...##.
+#   .#####.....##..########..##.....##.##.##.##.##.....##
+#   .##..##....##..##.....##.#########.##..####.#########
+#   .##...##...##..##.....##.##.....##.##...###.##.....##
+#   .##....##.####.########..##.....##.##....##.##.....##
+##########################################################################################################
+boss__efk__kibana_subdomain: kibana
+boss__efk__kibana_version: 5.6.2
+boss__efk__kibana_image_repo: "bossjones/kibana"
+boss__efk__kibana_image_tag: "{{ boss__efk__kibana_version }}"
+boss__efk__kibana_cpu_limit: 1000m
+boss__efk__kibana_cpu_requests: 1000m
+
+boss__efk__kibana_deployment_labels:
+    k8s-app: kibana-logging
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__kibana_deployment_spec_replicas: 1
+boss__efk__kibana_deployment_spec_selector_match_labels:
+      k8s-app: kibana-logging
+boss__efk__kibana_deployment_spec_template_metadata_labels:
+        k8s-app: kibana-logging
+boss__efk__kibana_deployment_spec_template_spec_node_selector:
+        kubernetes.io/hostname: "borg-worker-01"
+boss__efk__kibana_ingress_labels:
+    k8s-app: kibana-ingress
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: efk
+boss__efk__kibana_ingress_annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+boss__efk__kibana_service_labels:
+    k8s-app: kibana-logging
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    kubernetes.io/name: "Kibana"
+    boss-part-of: efk
+############################################
+
 
 boss__efk__elasticsearch_persistent_volume_spec_capacity_storage: 5Gi
 boss__efk__elasticsearch_persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/elasticsearch"
