--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -7,6 +7,7 @@ path_to_network_disk: "/mnt/publicdata"
 main_network_interface: 'ens192'
 nfs_server_group: nfs_masters
 nfs_client_group: nfs_clients
+nfs_server_ip_override: 192.168.1.174
 
 #      .########..######..##.....##..#######...######..########.########..##.....##.########.########.
 #      .##.......##....##.##.....##.##.....##.##....##.##.......##.....##.##.....##.##.......##.....##
@@ -345,8 +346,8 @@ boss__efk__kibana_service_labels:
 
 boss__efk__elasticsearch_persistent_volume_spec_capacity_storage: 5Gi
 boss__efk__elasticsearch_persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/elasticsearch"
-boss__efk__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
-
+# boss__efk__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+boss__efk__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 
 
 ##########################################
@@ -440,7 +441,9 @@ boss__registry__stateful_set_spec_template_metadata_labels:
 
 boss__registry__persistent_volume_spec_capacity_storage: 10Gi
 boss__registry__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/registry"
-boss__registry__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+# TODO: FIXME, this needs to be dynamic going forward, but for now, we need to hardcode it
+# boss__registry__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+boss__registry__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 
 # ---
 # local_release_dir: /tmp/releases
