wip: render cert-manager

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -452,6 +452,22 @@ boss__registry__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/regis
 # boss__registry__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
 boss__registry__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 
+
+
+##########################################################################################################
+#         ..######..########.########..########.........##.....##....###....##....##....###.....######...########.########.
+#         .##....##.##.......##.....##....##............###...###...##.##...###...##...##.##...##....##..##.......##.....##
+#         .##.......##.......##.....##....##............####.####..##...##..####..##..##...##..##........##.......##.....##
+#         .##.......######...########.....##....#######.##.###.##.##.....##.##.##.##.##.....##.##...####.######...########.
+#         .##.......##.......##...##......##............##.....##.#########.##..####.#########.##....##..##.......##...##..
+#         .##....##.##.......##....##.....##............##.....##.##.....##.##...###.##.....##.##....##..##.......##....##.
+#         ..######..########.##.....##....##............##.....##.##.....##.##....##.##.....##..######...########.##.....##
+##########################################################################################################
+
+boss__certmanager__manifest_path: "{{manifest_dir_path}}/cert-manager"
+boss__certmanager__namespace_name: kube-system
+boss__certmanager__example_com_namespace_name: default
+
 # ---
 # local_release_dir: /tmp/releases
 
