--- a/extra_playbooks/roles/kubernetes-apps/registry/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/registry/tasks/main.yaml
@@ -2,10 +2,10 @@
 
 # htpasswd -Bbn admin admin123 | base64
 
-- name: "registry | Create httpasswd: htpasswd -Bbn admin admin123 | base64"
+- name: "registry | Create httpasswd: htpasswd -Bbn admin admin123"
 
   shell: |
-    htpasswd -Bbn admin admin123 | base64 | tee htpasswd.base64
+    htpasswd -Bbn admin admin123 | tee htpasswd.base64
   # args:
   #   creates: 'htpasswd.base64'
   register: boss__registry__htpasswd_base64_results
@@ -15,8 +15,7 @@
 
 - name: "registry | set base64 fact"
   set_fact:
-    htpasswd_base64: |
-      "{{boss__registry__htpasswd_base64_results.stdout}}"
+    htpasswd_base64: '{{boss__registry__htpasswd_base64_results.stdout | b64encode }}'
 
 - name: "registry | Create directory: {{boss__registry__manifest_path}}"
   file:
