--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -371,7 +371,8 @@ boss__registry__enable_tls: true
 boss__registry__tls_cert_cluster_issuer_name: selfsigning-issuer
 
 boss__registry__ingress_annotations: |
-  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
+  nginx.ingress.kubernetes.io/rewrite-target: \"/\"
 
 boss__registry__ingress_labels: |
   k8s-app: registry
