--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -471,6 +471,110 @@ boss__certmanager__manifest_path: "{{manifest_dir_path}}/cert-manager"
 boss__certmanager__namespace_name: kube-system
 boss__certmanager__example_com_namespace_name: default
 
+
+##########################################################################################################
+#    .########..########..######...####..######..########.########..##....##.........##.....##.####
+#    .##.....##.##.......##....##...##..##....##....##....##.....##..##..##..........##.....##..##.
+#    .##.....##.##.......##.........##..##..........##....##.....##...####...........##.....##..##.
+#    .########..######...##...####..##...######.....##....########.....##....#######.##.....##..##.
+#    .##...##...##.......##....##...##........##....##....##...##......##............##.....##..##.
+#    .##....##..##.......##....##...##..##....##....##....##....##.....##............##.....##..##.
+#    .##.....##.########..######...####..######.....##....##.....##....##.............#######..####
+##########################################################################################################
+boss__registry__ui__subdomain: registry-ui
+boss__registry__ui__manifest_path: "{{manifest_dir_path}}/registry-ui"
+boss__registry__ui__namespace_name: default
+boss__registry__ui__deployment_name: registry-ui
+boss__registry__ui__enable_pvc: false
+boss__registry__ui__enable_tls: true
+boss__registry__ui__tls_cert_cluster_issuer_name: selfsigning-issuer
+
+boss__registry__ui__ingress_annotations: |
+  nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
+  nginx.ingress.kubernetes.io/rewrite-target: \"/\"
+
+boss__registry__ui__ingress_labels: |
+  k8s-app: registry-ui
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: registry-ui
+  version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__service_labels: |
+    k8s-app: registry-ui
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    kubernetes.io/name: "KubeRegistry"
+    boss-part-of: registry-ui
+    version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__persistent_volume_claim_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: registry-ui
+  boss-part-of: registry-ui
+  version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__persistent_volume_claim_spec_resources_requests_storage: "2Gi"
+boss__registry__ui__persistent_volume_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: registry-ui
+  boss-part-of: registry-ui
+  version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__version: 2.6
+boss__registry__ui__image_repo: "registry"
+boss__registry__ui__image_tag: "{{ boss__registry__ui__version }}"
+boss__registry__ui__cpu_limit: 1000m
+boss__registry__ui__mem_limit: 500Mi
+boss__registry__ui__cpu_requests: 100m
+boss__registry__ui__mem_requests: 200Mi
+
+boss__registry__ui__service_account_labels: |
+    k8s-app: registry-ui
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: registry-ui
+    version: "{{ boss__registry__ui__version }}"
+boss__registry__ui__cluster_role_labels: |
+    k8s-app: registry-ui
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: registry-ui
+    version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__cluster_role_binding_labels: |
+    k8s-app: registry-ui
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: registry-ui
+    version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__stateful_set_labels: |
+    k8s-app: registry-ui
+    version: "{{ boss__registry__ui__version }}"
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    boss-part-of: registry-ui
+
+boss__registry__ui__stateful_set_spec_replicas: 1
+boss__registry__ui__stateful_set_spec_selector_match_labels: |
+        k8s-app: registry-ui
+        version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__stateful_set_spec_template_metadata_labels: |
+        k8s-app: registry-ui
+        version: "{{ boss__registry__ui__version }}"
+        kubernetes.io/cluster-service: "true"
+
+boss__registry__ui__persistent_volume_spec_capacity_storage: 10Gi
+boss__registry__ui__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/registry-ui"
+# TODO: FIXME, this needs to be dynamic going forward, but for now, we need to hardcode it
+# boss__registry__ui__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+boss__registry__ui__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
+
+
 # ---
 # local_release_dir: /tmp/releases
 
