--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -620,6 +620,27 @@ boss__jenkins__service_labels: |
     addonmanager.kubernetes.io/mode: Reconcile
     kubernetes.io/name: "jenkins"
     boss-part-of: jenkins
+
+boss__jenkins__persistent_volume_claim_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: jenkins
+  boss-part-of: jenkins
+  version: "{{ boss__jenkins__version }}"
+
+boss__jenkins__persistent_volume_claim_spec_resources_requests_storage: "8Gi"
+boss__jenkins__persistent_volume_labels: |
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  k8s-app: jenkins
+  boss-part-of: jenkins
+  version: "{{ boss__jenkins__version }}"
+
+boss__jenkins__persistent_volume_spec_capacity_storage: 8Gi
+boss__jenkins__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/jenkins"
+# TODO: FIXME, this needs to be dynamic going forward, but for now, we need to hardcode it
+# boss__jenkins__nfs_master_node_ip: "{{ hostvars[groups[nfs_server_group][0]]['ansible_' + main_network_interface].ipv4.address }}"
+boss__jenkins__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 ############################################
 
 
